# module-8-final-azhnov

./: .gitignore  README.md  pyproject.toml  requirements.txt
kubernetes/: s3-sa-ivanazhnov.yaml  s3-secret-ivanazhnov.yaml  sklearn-model-inference-ivanazhnov.yaml
src/: test.csv
src/service/: convert_to_onnx.py  main.py  model_types.py  onnx_benchmark.py  predictor.py  schemas.py  test_onnx.py  train_and_save_model.py
src/service/artifacts/: model.onnx  profile_onnx_IvanAzhnov.json
